--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.6.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
