--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,9 @@ jobs:
       run: touch ./src/main/resources/application.properties
     - name: get application.properties values
       run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+
+    - name: Gradle Permission
+      run: chmod +x ./gradlew
     
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
