--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,8 +17,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  build-and-push-docker:
     runs-on: ubuntu-latest
 
     steps:
@@ -43,3 +42,16 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build -x test
+
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:latest
+
+    - name: Login to Docker Hub using Access Token
+      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
+    - name: Push the Docker image
+      run: docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
+  
+  deploy:
+    needs: build-and-push-docker
+    runs-on: ubuntu-latest
