--- a/.github/workflows/backend_ci_cd.yml
+++ b/.github/workflows/backend_ci_cd.yml
@@ -8,10 +8,16 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+
+env:
+  DOCKER_IMAGE_NAME: parking
+  EC2_HOST: 3.38.97.205
+  EC2_SSH_USER: ec2-user
+  PRIVATE_KEY: ${{ secrets.PEM_KEY }}
+  CONTAINER_NAME: parking
+  DOCKER_HUB: nakim81/parking:latest
 
 permissions:
   contents: read
@@ -44,10 +50,36 @@ jobs:
         arguments: build -x test
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:latest
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER_NAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
 
-    - name: Login to Docker Hub using Access Token
-      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USER_NAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    
     - name: Push the Docker image
-      run: docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
+      run: docker push ${{ secrets.DOCKER_USER_NAME }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+
+  deploy-to-ec2:
+    needs: build-and-push-docker
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ env.EC2_HOST }}
+        username: ${{ env.EC2_SSH_USER }}
+        key: ${{ env.PRIVATE_KEY }}
+        script: |
+          CONTAINER_ID=$(sudo docker ps -a -q --filter "publish=3000")
+
+          if [ ! -z "$CONTAINER_ID" ]; then
+            sudo docker stop $CONTAINER_ID
+            sudo docker rm $CONTAINER_ID
+          fi
+
+          sudo docker pull ${{ env.DOCKER_HUB }}
+          sudo docker run --name ${{ env.CONTAINER_NAME }} -d -p 3000:8080 -e TZ=Asia/Seoul ${{ env.DOCKER_HUB }}
+          sudo docker network connect parking-network parking
