--- a/.github/workflows/backend_ci_cd.yml
+++ b/.github/workflows/backend_ci_cd.yml
@@ -40,6 +40,10 @@ jobs:
         run: touch ./src/main/resources/application.properties
       - name: get application.properties values
         run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+      - name: make keystore.p12
+        run: touch ./src/main/resources/keystore.p12
+      - name: get keystore.p12 values
+        run: echo "${{ secrets.KEYSTORE }}" > ./src/main/resources/keystore.p12
 
       - name: Gradle Permission
         run: chmod +x ./gradlew
